name: jsaddle
version: 0.3.0.2
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: Hamish Mackenzie <Hamish.K.Mackenzie@googlemail.com>
synopsis: High level interface for webkit-javascriptcore
description:
    This package provides an EDSL for calling JavaScript code using
    the JavaScriptCore engine and low level Haskell bindings
    in the webkit-javascriptcore library <https://github.com/ghcjs/webkit-javascriptcore>.
category: Web, Javascript
author: Hamish Mackenzie

source-repository head
    type: git
    location: https://github.com/ghcjs/jsaddle

flag gtk3
    description:
        Use GTK3 rather than GTK2

library

    if impl(ghcjs -any)
        build-depends:
            ghcjs-base -any,
            ghcjs-prim -any
    else
        if flag(gtk3)
            build-depends:
                gtk3 >=0.14.2 && <0.15,
                webkitgtk3 >=0.13.0.0 && <0.15,
                webkitgtk3-javascriptcore >=0.13.1.2 && <0.14
        else
            build-depends:
                gtk >=0.14.2 && <0.15,
                webkit >=0.13.0.0 && <0.15,
                webkit-javascriptcore >=0.13.1.2 && <0.14
        build-depends:
            glib -any
    exposed-modules:
        Language.Javascript.JSaddle
        Language.Javascript.JSaddle.Arguments
        Language.Javascript.JSaddle.Classes
        Language.Javascript.JSaddle.Evaluate
        Language.Javascript.JSaddle.Exception
        Language.Javascript.JSaddle.Monad
        Language.Javascript.JSaddle.Native
        Language.Javascript.JSaddle.Object
        Language.Javascript.JSaddle.Properties
        Language.Javascript.JSaddle.String
        Language.Javascript.JSaddle.Value
        Language.Javascript.JSaddle.Types
        Language.Javascript.JSaddle.Test
    build-depends:
        template-haskell -any,
        base <5,
        lens >=3.8.5 && <4.14,
        text >=0.11.2.3 && <1.3,
        transformers >=0.3.0.0 && <0.5
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -ferror-spans

test-suite test-tool

    if impl(ghcjs -any)
        buildable: False
    else
        if flag(gtk3)
            build-depends:
                gtk3 -any,
                webkitgtk3 -any,
                webkitgtk3-javascriptcore -any
        else
            build-depends:
                gtk -any,
                webkit -any,
                webkit-javascriptcore -any
        build-depends:
            glib -any
    type: exitcode-stdio-1.0
    main-is: DocTest.hs
    build-depends:
        QuickCheck -any,
        base -any,
        doctest -any,
        vector >=0.11.0.0 && <0.12,
        text >=0.11.2.3 && <1.3,
        jsaddle -any
    default-language: Haskell2010
    hs-source-dirs: tests
    ghc-options: -ferror-spans
