name: jsaddle
version: 0.5.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: Hamish Mackenzie <Hamish.K.Mackenzie@googlemail.com>
synopsis: High level interface for webkit-javascriptcore
description:
    This package provides an EDSL for calling JavaScript code using
    the JavaScriptCore engine and low level Haskell bindings
    in the webkit-javascriptcore library <https://github.com/ghcjs/webkit-javascriptcore>.
category: Web, Javascript
author: Hamish Mackenzie

source-repository head
    type: git
    location: https://github.com/ghcjs/jsaddle

library

    if impl(ghcjs -any)
        build-depends:
            ghcjs-base -any,
            ghcjs-prim -any
    else
        build-depends:
            aeson >=1.0.0.0 && <1.1,
            bytestring >=0.10.8.1 && <0.11,
            containers >=0.5.7.1 && <0.6,
            filepath >=1.4.1.0 && <1.5,
            http-types >=0.9.1 && <0.10,
            process >=1.4.2.0 && <1.5,
            stm >=2.4.4.1 && <2.5,
            wai >=3.2.1.1 && <3.3,
            wai-app-static >=3.1.6.1 && <3.2,
            wai-websockets >=3.0.1.1 && <3.1,
            warp >=3.2.8 && <3.3,
            websockets >=0.9.7.0 && <0.10
    exposed-modules:
        Language.Javascript.JSaddle
        Language.Javascript.JSaddle.Arguments
        Language.Javascript.JSaddle.Classes
        Language.Javascript.JSaddle.Evaluate
        Language.Javascript.JSaddle.Exception
        Language.Javascript.JSaddle.Monad
        Language.Javascript.JSaddle.Native
        Language.Javascript.JSaddle.Object
        Language.Javascript.JSaddle.Properties
        Language.Javascript.JSaddle.String
        Language.Javascript.JSaddle.Value
        Language.Javascript.JSaddle.Test
        Language.Javascript.JSaddle.Types
        Language.Javascript.JSaddle.WebSockets
        Language.Javascript.JSaddle.WebSockets.Files
        Paths_jsaddle
    build-depends:
        base <5,
        lens >=3.8.5 && <4.15,
        primitive >=0.6.1.0 && <0.7,
        template-haskell -any,
        text >=0.11.2.3 && <1.3,
        transformers >=0.3.0.0 && <0.6
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -ferror-spans

test-suite test-tool

    if impl(ghcjs -any)
        buildable: False
    type: exitcode-stdio-1.0
    main-is: DocTest.hs
    build-depends:
        QuickCheck -any,
        base -any,
        bytestring >=0.10.8.1 && <0.11,
        doctest -any,
        filepath >=1.4.1.0 && <1.5,
        http-types >=0.9.1 && <0.10,
        jsaddle -any,
        process >=1.4.2.0 && <1.5,
        text >=0.11.2.3 && <1.3,
        vector >=0.11.0.0 && <0.12,
        wai >=3.2.1.1 && <3.3,
        wai-app-static >=3.1.6.1 && <3.2,
        wai-websockets >=3.0.1.1 && <3.1,
        warp >=3.2.8 && <3.3,
        websockets >=0.9.7.0 && <0.10
    default-language: Haskell2010
    hs-source-dirs: tests
    ghc-options: -ferror-spans -threaded
