name: jsaddle
version: 0.5.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: Hamish Mackenzie <Hamish.K.Mackenzie@googlemail.com>
synopsis: High level interface for webkit-javascriptcore
description:
    This package provides an EDSL for calling JavaScript code using
    the JavaScriptCore engine and low level Haskell bindings
    in the webkit-javascriptcore library <https://github.com/ghcjs/webkit-javascriptcore>.
category: Web, Javascript
author: Hamish Mackenzie
data-files:
    data/index.html
    data/jsaddle.js

source-repository head
    type: git
    location: https://github.com/ghcjs/jsaddle

library

    if impl(ghcjs -any)
        build-depends:
            ghcjs-base -any,
            ghcjs-prim -any
    else
        exposed-modules:
            Language.Javascript.JSaddle.WebSockets
            Language.Javascript.JSaddle.WebSockets.Files
            Language.Javascript.JSaddle.Test
        build-depends:
            aeson >=0.8.0.2 && <1.1,
            bytestring >=0.10.6.0 && <0.11,
            containers >=0.5.6.2 && <0.6,
            filepath >=1.4.0.0 && <1.5,
            http-types >=0.8.6 && <0.10,
            process >=1.2.3.0 && <1.5,
            stm >=2.4.4 && <2.5,
            wai >=3.0.3.0 && <3.3,
            wai-app-static >=3.1.1 && <3.2,
            wai-websockets >=3.0.0.6 && <3.1,
            warp >=3.1.2 && <3.3,
            websockets >=0.9.5.0 && <0.10
    exposed-modules:
        Language.Javascript.JSaddle
        Language.Javascript.JSaddle.Arguments
        Language.Javascript.JSaddle.Classes
        Language.Javascript.JSaddle.Evaluate
        Language.Javascript.JSaddle.Exception
        Language.Javascript.JSaddle.Monad
        Language.Javascript.JSaddle.Native
        Language.Javascript.JSaddle.Object
        Language.Javascript.JSaddle.Properties
        Language.Javascript.JSaddle.String
        Language.Javascript.JSaddle.Value
        Language.Javascript.JSaddle.Types
        Paths_jsaddle
    build-depends:
        base <5,
        lens >=3.8.5 && <4.15,
        primitive >=0.6.1.0 && <0.7,
        template-haskell -any,
        text >=1.2.1.3 && <1.3,
        transformers >=0.4.2.0 && <0.6
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -ferror-spans

test-suite test-tool

    type: exitcode-stdio-1.0
    main-is: DocTest.hs
    build-depends:
        base -any
    if !impl(ghcjs)
        build-depends:
            QuickCheck -any,
            bytestring >=0.10.6.0 && <0.11,
            doctest >=0.10.1 && <0.12,
            filepath >=1.4.0.0 && <1.5,
            http-types >=0.8.6 && <0.10,
            jsaddle -any,
            process >=1.2.3.0 && <1.5,
            text >=1.2.1.3 && <1.3,
            vector >=0.10.12.3 && <0.12,
            wai >=3.0.3.0 && <3.3,
            wai-app-static >=3.1.1 && <3.2,
            wai-websockets >=3.0.0.6 && <3.1,
            warp >=3.1.2 && <3.3,
            websockets >=0.9.5.0 && <0.10
    default-language: Haskell2010
    hs-source-dirs: tests
    ghc-options: -ferror-spans -threaded
