name: jsc
version: 0.1.1.0
cabal-version: >=1.10
license: MIT
license-file: LICENSE
maintainer: Hamish Mackenzie <Hamish.K.Mackenzie@googlemail.com>
synopsis: High level interface for webkit-javascriptcore
description: This package provides an EDSL for calling JavaScript code using
             the JavaScriptCore engine and low level Haskell bindings
             in the webkit-javascriptcore library <https://github.com/ghcjs/webkit-javascriptcore>.
author: Hamish Mackenzie
data-dir: ""

flag gtk3
    Description: Use GTK3 rather than GTK2
    Default: True

flag jsffi
    description: Use JavaScriptFFI extension for GHCJS JavaScript output
    default: True

flag webkit
    description: Use WebKitGtk and JavaScriptCore for GHCJS output
    default: False

flag jmacro
    description: Include some JMacro support
    default: True

library
    if impl(ghcjs) && flag(jsffi)
        cpp-options: -DUSE_JAVASCRIPTFFI
        build-depends: ghcjs-base

    if !impl(ghcjs) || flag(webkit)
        cpp-options: -DUSE_WEBKIT
        if flag(gtk3)
            build-depends: webkit3 >=0.12.5 && <0.13,
                           webkit3-javascriptcore >=0.0.0.999 && <0.1
        else
            build-depends: webkit >=0.12.5 && <0.13,
                           webkit-javascriptcore >=0.0.0.999 && <0.1

    if flag(jmacro)
        exposed-modules: Language.Javascript.JSC.JMacro
        build-depends: jmacro >=0.6.3 && <0.8

    build-depends: template-haskell -any, base -any, lens >=3.8.5 && <3.11,
                   text >=0.11.2.3 && <0.12, transformers >=0.3.0.0 && <0.4

    exposed-modules: Language.Javascript.JSC
                     Language.Javascript.JSC.Arguments Language.Javascript.JSC.Classes
                     Language.Javascript.JSC.Evaluate Language.Javascript.JSC.Exception
                     Language.Javascript.JSC.Monad
                     Language.Javascript.JSC.Object Language.Javascript.JSC.Properties
                     Language.Javascript.JSC.String Language.Javascript.JSC.Value
                     Language.Javascript.JSC.Types
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules: Language.Javascript.JSC.PropRef

test-suite test-tool
    if flag(jsffi)
        buildable: False

    if impl(ghcjs) && flag(jsffi)
        cpp-options: -DUSE_JAVASCRIPTFFI
        build-depends: ghcjs-base

    if !impl(ghcjs) || flag(webkit)
        cpp-options: -DUSE_WEBKIT
        build-depends: glib >=0.12.3.1 && <0.13
        if flag(gtk3)
            build-depends: gtk3 >= 0.12.4.1 && <0.13,
                           webkit3 >=0.12.5 && <0.13,
                           webkit3-javascriptcore >=0.0.0.999 && <0.1
        else
            build-depends: gtk >= 0.12.4.1 && <0.13,
                           webkit >=0.12.5 && <0.13,
                           webkit-javascriptcore >=0.0.0.999 && <0.1

    if flag(jmacro)
        build-depends: jmacro >=0.6.3 && <0.8

    build-depends: template-haskell -any, base -any, lens >=3.8.5 && <3.11,
                   text >=0.11.2.3 && <0.12, transformers >=0.3.0.0 && <0.4,
                   hslogger -any, jsc ==0.1.1.0
    type: exitcode-stdio-1.0
    main-is: TestJSC.hs
    default-language: Haskell2010
    hs-source-dirs: tests
