name: jsaddle-clib
version: 0.9.8.2
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: Hamish Mackenzie <Hamish.K.Mackenzie@googlemail.com>
synopsis: Interface for JavaScript that works with GHCJS and GHC
description:
    This package provides an EDSL for calling JavaScript that
    can be used both from GHCJS and GHC.
category: Web, Javascript
author: Hamish Mackenzie

source-repository head
    type: git
    location: https://github.com/ghcjs/jsaddle

library
    exposed-modules:
        Language.Javascript.JSaddle.CLib
        Language.Javascript.JSaddle.CLib.Internal
    build-depends:
        aeson >=0.8.0.2 && <2.1,
        base <5,
        base-compat >=0.9.0 && <0.12,
        bytestring >=0.10.6.0 && <0.11,
        jsaddle >= 0.9.0.0 && <0.10,
        data-default,
        text
    default-language: Haskell2010
    hs-source-dirs: src
    Include-dirs: cbits/include
    Includes: jsaddle.h
    Install-includes: jsaddle.h
    ghc-options: -ferror-spans -Wall
    if impl(ghcjs)
        hs-source-dirs: src-ghcjs
    else
        hs-source-dirs: src-ghc
