name: jsaddle-clib
version: 0.9.9.3
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: Hamish Mackenzie <Hamish.K.Mackenzie@googlemail.com>
synopsis: Interface for JavaScript that works with GHCJS and GHC
description:
    This package provides an EDSL for calling JavaScript that
    can be used both from GHCJS and GHC.
category: Web, Javascript
author: Hamish Mackenzie
tested-with: GHC==9.12.2, GHC==9.10.1, GHC==9.8.4, GHC==9.6.7, GHC==9.4.8, GHC==9.2.8, GHC==9.0.2, GHC==8.10.7, GHC==8.8.4, GHC==8.6.5, GHC==8.4.4

source-repository head
    type: git
    location: https://github.com/ghcjs/jsaddle

library
    exposed-modules:
        Language.Javascript.JSaddle.CLib
        Language.Javascript.JSaddle.CLib.Internal
    build-depends:
        aeson >=0.8.0.2 && <2.3,
        base <5,
        base-compat >=0.9.0 && <0.15,
        bytestring >=0.10.6.0 && <0.13,
        jsaddle >= 0.9.9.0 && <0.10,
        data-default,
        text
    default-language: Haskell2010
    hs-source-dirs: src
    Include-dirs: cbits/include
    Includes: jsaddle.h
    Install-includes: jsaddle.h
    ghc-options: -ferror-spans -Wall
    if impl(ghcjs) || arch(javascript)
        hs-source-dirs: src-ghcjs
    else
        hs-source-dirs: src-ghc
