name: jsaddle-warp
version: 0.9.3.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: Hamish Mackenzie <Hamish.K.Mackenzie@googlemail.com>
synopsis: Interface for JavaScript that works with GHCJS and GHC
description:
    This package provides an EDSL for calling JavaScript that
    can be used both from GHCJS and GHC.  When using GHC
    the application is run using Warp and WebSockets to
    drive a small JavaScipt helper.
category: Web, Javascript
author: Hamish Mackenzie

source-repository head
    type: git
    location: https://github.com/ghcjs/jsaddle
    subdir: jsaddle-warp

library

    if !impl(ghcjs -any)
        exposed-modules:
            Language.Javascript.JSaddle.WebSockets
        build-depends:
            aeson >=0.8.0.2 && <1.3,
            bytestring >=0.10.6.0 && <0.11,
            containers >=0.5.6.2 && <0.6,
            foreign-store >=0.2 && <0.3,
            http-types >=0.8.6 && <0.10,
            jsaddle >=0.9.2.0 && <0.10,
            stm >=2.4.4 && <2.5,
            text >=1.2.1.3 && <1.3,
            time >=1.5.0.1 && <1.8,
            transformers >=0.4.2.0 && <0.6,
            wai >=3.0.3.0 && <3.3,
            wai-websockets >=3.0.0.6 && <3.1,
            warp >=3.1.2 && <3.3,
            websockets >=0.9.5.0 && <0.11
    exposed-modules:
        Language.Javascript.JSaddle.Warp
    build-depends:
        base <5
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -ferror-spans -Wall

test-suite test-tool
    if impl(ghcjs -any) || os(ios)
        buildable: False

    build-depends:
            QuickCheck -any,
            aeson -any,
            bytestring -any,
            containers -any,
            deepseq -any,
            doctest >=0.10.1 && <0.12,
            filepath >=1.4.0.0 && <1.5,
            ghc-prim -any,
            http-types -any,
            jsaddle -any,
            jsaddle-warp -any,
            lens -any,
            network -any,
            ref-tf -any,
            primitive -any,
            process >=1.2.3.0 && <1.5,
            stm -any,
            text -any,
            time -any,
            transformers -any,
            wai -any,
            wai-websockets -any,
            warp -any,
            webdriver >=0.8.4 && <0.9,
            websockets -any
    type: exitcode-stdio-1.0
    main-is: DocTest.hs
    build-depends:
        base -any
    default-language: Haskell2010
    hs-source-dirs: tests
    ghc-options: -ferror-spans -threaded
