name: jsaddle-warp
version: 0.9.9.2
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: Hamish Mackenzie <Hamish.K.Mackenzie@googlemail.com>
synopsis: Interface for JavaScript that works with GHCJS and GHC
description:
    This package provides an EDSL for calling JavaScript that
    can be used both from GHCJS and GHC.  When using GHC
    the application is run using Warp and WebSockets to
    drive a small JavaScript helper.
category: Web, Javascript
author: Hamish Mackenzie

source-repository head
    type: git
    location: https://github.com/ghcjs/jsaddle
    subdir: jsaddle-warp

library

    if !impl(ghcjs -any) && !arch(javascript)
        exposed-modules:
            Language.Javascript.JSaddle.WebSockets
        other-modules:
            Language.Javascript.JSaddle.WebSockets.Compat
        build-depends:
            aeson >=0.8.0.2 && <2.3,
            bytestring >=0.10.6.0 && <0.13,
            containers >=0.5.6.2 && <0.8,
            foreign-store >=0.2 && <0.3,
            http-types >=0.8.6 && <0.13,
            jsaddle >=0.9.9.0 && <0.10,
            stm >=2.4.4 && <2.6,
            text >=1.2.1.3 && <1.3 || >= 2.0 && < 2.2,
            time >=1.5.0.1 && <1.15,
            transformers >=0.4.2.0 && <0.7,
            wai >=3.0.3.0 && <3.3,
            wai-websockets >=3.0.0.6 && <3.1,
            warp >=3.1.2 && <3.5,
            websockets >=0.9.5.0 && <0.14
    exposed-modules:
        Language.Javascript.JSaddle.Warp
    build-depends:
        base <5
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -ferror-spans -Wall

test-suite test-tool
    -- Disable doctests as they dont work at the moment and the hspec tests
    -- covers the testing
    buildable: False

    build-depends:
            QuickCheck -any,
            aeson -any,
            bytestring -any,
            containers -any,
            deepseq -any,
            doctest >=0.10.1 && <0.19,
            exceptions -any,
            filepath >=1.4.0.0 && <1.6,
            foreign-store -any,
            ghc-prim -any,
            http-types -any,
            jsaddle -any,
            jsaddle-warp -any,
            lens -any,
            network -any,
            ref-tf -any,
            primitive -any,
            process >=1.2.3.0 && <1.7,
            random -any,
            stm -any,
            text -any,
            time -any,
            transformers -any,
            unliftio-core -any,
            wai -any,
            wai-websockets -any,
            warp -any,
            webdriver >=0.8.4 && <0.10,
            websockets -any
    type: exitcode-stdio-1.0
    main-is: DocTest.hs
    build-depends:
        base -any
    default-language: Haskell2010
    hs-source-dirs: tests
    ghc-options: -ferror-spans -threaded

test-suite spec
  if impl(ghcjs -any) || arch(javascript)
    buildable: False

  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Language.Javascript.JSaddle.ObjectSpec
      Language.Javascript.JSaddle.ValueSpec
      Language.Javascript.JSaddleSpec
  hs-source-dirs:
      tests
  ghc-options: -Wall
  build-depends:
      base
    , bytestring
    , directory
    , hspec == 2.*
    , jsaddle
    , jsaddle-warp
    , lens
    , mtl
    , process
    , text
    , warp
    , websockets
  other-modules:
  default-language: Haskell2010
