name: jsaddle-webkit2gtk
version: 0.9.8.1
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: Hamish Mackenzie <Hamish.K.Mackenzie@googlemail.com>
synopsis: Interface for JavaScript that works with GHCJS and GHC
description:
    This package provides an EDSL for calling JavaScript that
    can be used both from GHCJS and GHC.  When using GHC
    the application is run using Warp and WebSockets to
    drive a small JavaScipt helper.
category: Web, Javascript
author: Hamish Mackenzie

source-repository head
    type: git
    location: https://github.com/ghcjs/jsaddle
    subdir: jsaddle-webkit2gtk

library
    exposed-modules:
        Language.Javascript.JSaddle.WebKitGTK
    build-depends:
        base <5
    if !impl(ghcjs -any)
      build-depends:
        aeson >=0.8.0.2 && <1.6,
        base <5,
        bytestring >=0.10.6.0 && <0.11,
        directory >=1.0.0.2 && <1.4,
        gi-glib >=2.0.14 && <2.1,
        gi-gio >=2.0.14 && <2.1,
        gi-gtk >=3.0.17 && <3.1,
        gi-webkit2 >=4.0.14 && <4.1,
        gi-javascriptcore >=4.0.14 && <4.1,
        haskell-gi-base >=0.20 && <0.26,
        haskell-gi-overloading >=0.0 && < 2.0,
        jsaddle >=0.9.4.0 && <0.10,
        text >=1.2.1.3 && <1.3,
        webkit2gtk3-javascriptcore >=0.14.0.0 && <0.15
    if !os(windows)
      build-depends:
        unix >=2.3.1.0 && <2.8
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -ferror-spans -Wall

