name: jsaddle-webkitgtk
version: 0.8.1.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: Hamish Mackenzie <Hamish.K.Mackenzie@googlemail.com>
synopsis: Interface for JavaScript that works with GHCJS and GHC
description:
    This package provides an EDSL for calling JavaScript that
    can be used both from GHCJS and GHC.  When using GHC
    the application is run using Warp and WebSockets to
    drive a small JavaScipt helper.
category: Web, Javascript
author: Hamish Mackenzie

source-repository head
    type: git
    location: https://github.com/ghcjs/jsaddle
    subdir: jsaddle-webkitgtk

library
    exposed-modules:
        Language.Javascript.JSaddle.WebKitGTK
    build-depends:
        aeson >=0.8.0.2 && <1.1,
        base <5,
        bytestring >=0.10.6.0 && <0.11,
        directory >=1.0.0.2 && <1.3,
        gi-glib >=2.0.6 && <2.1,
        gi-gtk >=3.0.6 && <3.1,
        gi-webkit >=3.0.6 && <3.1,
        gi-javascriptcore >=3.0.6 && <3.1,
        haskell-gi-base >=0.20 && <0.21,
        jsaddle >=0.8.0.0 && <0.9,
        text >=1.2.1.3 && <1.3,
        unix >=2.3.1.0 && <2.8,
        webkitgtk3-javascriptcore >=0.14.0.0 && <0.15
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -ferror-spans -Wall

