name: jsaddle-webkitgtk
version: 0.9.9.3
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: Hamish Mackenzie <Hamish.K.Mackenzie@googlemail.com>
synopsis: Interface for JavaScript that works with GHCJS and GHC
description:
    jsaddle backend hosting the app in a GTK4 window containing a
    WebKitGTK 6.0 WebView (gi-gtk4 / gi-webkit 6.x).  The modern
    replacement for jsaddle-webkit2gtk (GTK3 / webkit2gtk 4.0, which has
    been removed from nixpkgs).
category: Web, Javascript
author: Hamish Mackenzie

source-repository head
    type: git
    location: https://github.com/ghcjs/jsaddle
    subdir: jsaddle-webkitgtk

library
    exposed-modules:
        Language.Javascript.JSaddle.WebKitGTK
    build-depends:
        base <5
    if !impl(ghcjs -any) && !arch(javascript)
      build-depends:
        aeson >=0.8.0.2 && <2.4,
        bytestring >=0.10.6.0 && <0.13,
        directory >=1.0.0.2 && <1.4,
        gi-glib >=2.0.14 && <2.1,
        gi-gio >=2.0.14 && <2.1,
        gi-gtk4 >=4.0.8 && <4.1,
        gi-webkit >=6.0.2 && <6.1,
        gi-javascriptcore6 >=6.0.2 && <6.1,
        haskell-gi-base >=0.26 && <0.27,
        jsaddle >=0.9.9.0 && <0.10,
        text >=1.2.1.3 && <1.3 || >= 2.0 && < 2.2
    if !os(windows)
      build-depends:
        unix >=2.3.1.0 && <2.9
    -- Native builds need webkitgtk 6.0 (GTK4): Linux only.
    -- (The ghcjs/javascript stub builds anywhere.)
    if !os(linux) && !impl(ghcjs) && !arch(javascript)
      buildable: False
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -ferror-spans -Wall

executable jsaddle-webkitgtk-demo
    main-is: Main.hs
    hs-source-dirs: demo
    build-depends:
        base <5,
        jsaddle,
        jsaddle-webkitgtk,
        text,
        unix
    -- Native-only (no ghcjs stub): a plain WebKitGTK window app.
    if !os(linux)
      buildable: False
    default-language: Haskell2010
    ghc-options: -ferror-spans -Wall -threaded
